Add publication list to projects

--- a/blog_efflux/_posts/2019-05-01-lalejini2021tag.md
+++ b/blog_efflux/_posts/2019-05-01-lalejini2021tag.md
@@ -10,6 +10,8 @@ authors:
   - Alexander Lalejini
   - Matthew Andres Moreno
   - Charles Ofria
+projects:
+  - tag
 venue: Genetic Programming and Evolvable Machines
 abstract: |
   We introduce and experimentally demonstrate the utility of tag-based genetic regulation, a new genetic programming (GP) technique that allows programs to dynamically adjust which code modules to express.
