--- a/blog_efflux/_posts/2019-05-01-moreno2019toward.md
+++ b/blog_efflux/_posts/2019-05-01-moreno2019toward.md
@@ -10,6 +10,8 @@ authors:
   - Matthew Andres Moreno
   - Charles Ofria
 venue: Artificial Life
+projects:
+  - dishtiny
 abstract: |
   The emergence of new replicating entities from the union of simpler entities characterizes some of the most profound events in natural evolutionary history.
   Such transitions in individuality are essential to the evolution of the most complex forms of life.
