--- a/blog_efflux/_posts/2020-01-01-conduit.md
+++ b/blog_efflux/_posts/2020-01-01-conduit.md
@@ -9,6 +9,9 @@ authors:
   - Santiago Rodriguez Papa
   - Charles Ofria
 venue: header-only C++ library
+projects:
+  - libraries
+  - conduit
 description: |
   C++ library that wraps intra-thread, inter-thread, and inter-process communication in a uniform, modular, object-oriented interface, with a focus on asynchronous high-performance computing applications.
 ---
