--- a/blog_efflux/_posts/2020-01-01-teeplot.md
+++ b/blog_efflux/_posts/2020-01-01-teeplot.md
@@ -8,6 +8,8 @@ view_publisher: https://pypi.org/project/teeplot/
 authors:
   - Matthew Andres Moreno
 venue: Python package published via PyPI
+projects:
+  - libraries
 description: |
   teeplot automatically saves a copy of rendered Jupyter notebook plots.
 ---
