--- a/blog_efflux/_posts/2021-07-22-moreno2021case.md
+++ b/blog_efflux/_posts/2021-07-22-moreno2021case.md
@@ -10,6 +10,8 @@ authors:
   - Santiago Rodriguez Papa
   - Charles Ofria
 venue: The Fourth Workshop on Open-Ended Evolution (OEE4)
+projects:
+  - dishtiny
 abstract: |
   Continuing generation of novelty, complexity, and adaptation are well-established as core aspects of open-ended evolution.
   However, the manner in which these phenomena relate remains an area of great theoretical interest.
