--- a/blog_efflux/_posts/2022-01-01-hstrat.md
+++ b/blog_efflux/_posts/2022-01-01-hstrat.md
@@ -12,6 +12,8 @@ authors:
 description: |
   hstrat enables phylogenetic inference on distributed digital evolution populations.
 venue: Python package published via PyPI
+projects:
+  - libraries
 bibtex: |-
   @article{moreno2022hereditary,
     author = {Moreno, Matthew Andres and Dolson, Emily and Ofria, Charles},
