--- a/blog_efflux/_posts/2022-01-01-keyname.md
+++ b/blog_efflux/_posts/2022-01-01-keyname.md
@@ -8,6 +8,8 @@ view_publisher: https://pypi.org/project/keyname/
 authors:
   - Matthew Andres Moreno
 venue: Python package published via PyPI
+projects:
+  - libraries
 description: |
   keyname helps easily pack and unpack metadata in a filename.
 ---
