--- a/blog_projects/_posts/0001-01-01-automap.md
+++ b/blog_projects/_posts/0001-01-01-automap.md
@@ -3,7 +3,7 @@ layout: project
 title: "Developing Methodology for Automatic Generation of Evolvable Genotype-Phenotype Maps"
 slug: automap
 theme: evolvability
+description: |
+  ![visualization of rugged fitness landscape suited to denoising autoencoder genotype-phenotype map.](/resources/cover-automap.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
+  _Visualization of rugged fitness landscape suited to denoising autoencoder genotype-phenotype map._
 ---
-
-![visualization of rugged fitness landscape suited to denoising autoencoder genotype-phenotype map.](/resources/cover-automap.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
-_Visualization of rugged fitness landscape suited to denoising autoencoder genotype-phenotype map._
