--- a/blog_projects/_posts/0001-01-01-dishtiny.md
+++ b/blog_projects/_posts/0001-01-01-dishtiny.md
@@ -3,7 +3,7 @@ layout: project
 title: "Studying Complexity, Novelty, and Adaptation via Digital Multicellularity Evolution Experiments"
 slug: dishtiny
 theme: scaling-up
+description: |
+  ![sequence of multicellular phenotypes observed in a DISHTINY experiment](/resources/cover-dishtiny.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
+  _Sequence of multicellular phenotypes observed in a DISHTINY experiment._
 ---
-
-![sequence of multicellular phenotypes observed in a DISHTINY experiment](/resources/cover-dishtiny.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
-_Sequence of multicellular phenotypes observed in a DISHTINY experiment._
