--- a/blog_projects/_posts/0001-01-01-hstrat.md
+++ b/blog_projects/_posts/0001-01-01-hstrat.md
@@ -3,7 +3,7 @@ layout: project
 title: "Robust Phylogenetic Inference over Parallel and Distributed Digital Evolution Systems"
 slug: hstrat
 theme: scaling-up
+description: |
+  ![retention visualization for hereditary stratigraphy policy](/resources/cover-hstrat.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
+  _Retention visualization for hereditary stratigraphy policy._
 ---
-
-![retention visualization for hereditary stratigraphy policy](/resources/cover-hstrat.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
-_Retention visualization for hereditary stratigraphy policy._
