--- a/blog_projects/_posts/0001-01-01-tag.md
+++ b/blog_projects/_posts/0001-01-01-tag.md
@@ -3,7 +3,7 @@ layout: project
 title: "Engineering Tag-Matching Systems for Digital Evolution"
 slug: tag
 theme: evolvability
+description: |
+  ![module expression snapshot in a DISHTINY case study](/resources/cover-tag.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
+  _Module expression snapshot in a DISHTINY case study._
 ---
-
-![module expression snapshot in a DISHTINY case study](/resources/cover-tag.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
-_Module expression snapshot in a DISHTINY case study._
