Mark hstrat as part of hstrat project

--- a/blog_efflux/_posts/2022-01-01-hstrat.md
+++ b/blog_efflux/_posts/2022-01-01-hstrat.md
@@ -14,6 +14,7 @@ description: |
 venue: Python package published via PyPI
 projects:
   - libraries
+  - hstrat
 bibtex: |-
   @article{moreno2022hereditary,
     author = {Moreno, Matthew Andres and Dolson, Emily and Ofria, Charles},
