Write evolvability project descriptions

--- a/blog_projects/_posts/0001-01-01-automap.md
+++ b/blog_projects/_posts/0001-01-01-automap.md
@@ -6,4 +6,20 @@ theme: evolvability
 description: |
   ![visualization of rugged fitness landscape suited to denoising autoencoder genotype-phenotype map.](/resources/cover-automap.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
   _Visualization of rugged fitness landscape suited to denoising autoencoder genotype-phenotype map._
+
+  In biology, phenotype refers to an organism’s observable characteristics (morphological, behavioral, physiological, chemical, etc.).
+  Importantly, the phenotype governs an organism’s ability to survive and reproduce --- its fitness.
+  Likewise, genotype refers to the heritable information that shapes an organism’s phenotype.
+  This is typically equated with an organism’s DNA content.
+
+  The genotype-phenotype map describes the relationship between an organism’s genotype and its phenotype.
+  In biology, this concept is tightly entwined with the process of development, the dynamics through which an organism’s genotype and environment interact to determine its phenotype.
+  As might be expected, the genotype-phenotype map profoundly influences the character of phenotypic variation that is produced under genetic mutation.
+
+  Evolutionary search cannot succeed without the production of heritable, viable phenotypic variation, a trait referred to as evolvability.
+  How to engineer genotype-phenotype maps to promote evolvability in digital evolution systems remains a crucial open question.
+
+  This work introduces the use of bottlenecked and denoising autoencoders to automatically generate evolvable genotype-phenotype mappings.
+  Autoencoders are algorithms that learn to regurgitate a particular type of input, usually implemented using deep learning.
+  They allow for enhancement of evolvability due to their ability to repair poor-quality solutions and compactly represent the space of high-quality solutions.
 ---
