Write scale-up figure captions

--- a/blog_projects/_posts/0001-01-01-dishtiny.md
+++ b/blog_projects/_posts/0001-01-01-dishtiny.md
@@ -6,4 +6,15 @@ theme: scaling-up
 description: |
   ![sequence of multicellular phenotypes observed in a DISHTINY experiment](/resources/cover-dishtiny.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
   _Sequence of multicellular phenotypes observed in a DISHTINY experiment._
+
+  Evolutionary transitions occur when previously-independent replicating entities unite to form more complex individuals.
+  The necessary conditions and evolutionary mechanisms for these transitions to arise continue to be fruitful targets of scientific interest.
+  Likewise, the relationship of such transitions to continuing generation of novelty, complexity, and adaptation remains an open question.
+
+  This work uses a digital model of multicellularity to study a range of fraternal transitions in populations of open-ended self-replicating computer programs.
+  These digital cells are allowed to form and replicate kin groups by selectively adjoining or expelling daughter cells.
+  This model provides an opportunity study group-level traits that are characteristic of a fraternal transition.
+  These include reproductive division of labor, resource sharing within kin groups, resource investment in offspring groups, asymmetrical behaviors mediated by messaging, morphological patterning, and adaptive apoptosis.
+
+  Ongoing work with this model seeks to tease apart the interplay between novelty, complexity, and adaptation in evolution, with early results suggesting a loose, sometimes divergent, relationship.
 ---
