--- a/blog_projects/_posts/0001-01-01-hstrat.md
+++ b/blog_projects/_posts/0001-01-01-hstrat.md
@@ -7,7 +7,7 @@ description: |
   ![retention visualization for hereditary stratigraphy policy](/resources/cover-hstrat.png){:width="100%"}{:height="200px"}{:style="object-fit:cover; object-position:top;"}
   _Retention visualization for hereditary stratigraphy policy._
 
-  The capability to detect phylogenetic cues within digital evolution has become increasingly necessary in both applied and scientific contexts. These cues unlock post hoc insight into evolutionary history --- particularly with respect to ecology and selection pressure --- but also can be harnessed to drive digital evolution algorithms as they unfold [CITE].
+  The capability to detect phylogenetic cues within digital evolution has become increasingly necessary in both applied and scientific contexts. These cues unlock post hoc insight into evolutionary history --- particularly with respect to ecology and selection pressure --- but also can be harnessed to drive digital evolution algorithms as they unfold.
   However, parallel and distributed evaluation complicates, among other concerns, maintenance of an evolutionary record.
   Existing phylogenetic record keeping requires inerrant and complete collation of birth and death reports within a centralized data structure.
   Such perfect tracking approaches are brittle to data loss or corruption and impose communication overhead.
