Fixup efflux loose ends

--- a/blog_efflux/_posts/2018-05-02-cole2018broadly.md
+++ b/blog_efflux/_posts/2018-05-02-cole2018broadly.md
@@ -24,7 +24,7 @@ abstract: |
   Alone, *nerd1* alleles modestly reduce primary root growth, both by shortening the root meristem and by reducing cell elongation, but also result in a slight increase in root hair length, bulging, and rupture.
   *NERD1* was identified molecularly as At3g51050, which encodes a transmembrane protein of unknown function that is broadly conserved throughout the Archaeplastida. A functional NERD1–GFP fusion localizes to the Golgi, in a pattern distinct from the plasma membrane-localized exocyst, arguing against a direct NERD1–exocyst interaction. Structural modeling suggests the majority of the protein is positioned in the lumen, in a β-propeller-like structure that has some similarity to proteins that bind polysaccharides. We suggest that NERD1 interacts with the exocyst indirectly, possibly affecting polysaccharides destined for the cell wall, and influencing cell wall characteristics in a developmentally distinct manner.
 bibtex: |-
-  @article{10.1093/jxb/ery162,
+  @article{cole2018broadly,
     author = {Cole, Rex A and Peremyslov, Valera V and Van Why, Savannah and Moussaoui, Ibrahim and Ketter, Ann and Cool, Renee and Moreno, Matthew Andres and Vejlupkova, Zuzana and Dolja, Valerian V and Fowler, John E},
     title = "{A broadly conserved NERD genetically interacts with the exocyst to affect root growth and cell expansion}",
     journal = {Journal of Experimental Botany},
