Set permalink for pub landing pages

--- a/blog_efflux/_posts/2018-05-02-cole2018broadly.md
+++ b/blog_efflux/_posts/2018-05-02-cole2018broadly.md
@@ -2,6 +2,7 @@
 layout: efflux
 title: "A broadly conserved NERD genetically interacts with the exocyst to affect root growth and cell expansion "
 date: 2018-05-02
+permalink: "/pubs/:title"
 category: journal
 download: https://academic.oup.com/jxb/article-pdf/69/15/3625/25097718/ery162.pdf
 view_publisher: https://doi.org/10.1093/jxb/ery162
