--- a/blog_efflux/_posts/2019-05-01-lalejini2021tag.md
+++ b/blog_efflux/_posts/2019-05-01-lalejini2021tag.md
@@ -2,6 +2,7 @@
 layout: efflux
 title: "Tag-based regulation of modules in genetic programming improves context-dependent problem solving"
 date: 2021-07-07
+permalink: "/pubs/:title"
 category: journal
 download: https://lalejini.com/pubs/lalejini-et-al-2021-tag-based-genetic-regulation.pdf
 view_publisher: https://doi.org/10.1007/s10710-021-09406-8
