--- a/blog_efflux/_posts/2019-05-01-moreno2019toward.md
+++ b/blog_efflux/_posts/2019-05-01-moreno2019toward.md
@@ -2,6 +2,7 @@
 layout: efflux
 title: "Toward Open-Ended Fraternal Transitions in Individuality"
 date: 2019-05-01
+permalink: "/pubs/:title"
 category: journal
 download: https://github.com/mmore500/alife-2018/releases/download/v2.1.3/alife-2018-draft.pdf
 view_publisher: https://doi.org/10.1162/artl_a_00284
