--- a/blog_efflux/_posts/2021-07-22-moreno2021case.md
+++ b/blog_efflux/_posts/2021-07-22-moreno2021case.md
@@ -2,6 +2,7 @@
 layout: efflux
 title: "Case Study of Novelty, Complexity, and Adaptation in a Multicellular System"
 date: 2021-07-22
+permalink: "/pubs/:title"
 category: workshop
 download: https://github.com/mmore500/oee4/releases/download/v1.0.0/moreno-oee4.pdf
 view_publisher: http://workshops.alife.org/oee4/
