--- a/blog_efflux/_posts/2022-11-23-moreno2022best.md
+++ b/blog_efflux/_posts/2022-11-23-moreno2022best.md
@@ -12,7 +12,7 @@ authors:
   - Charles Ofria
 venue: arXiv
 projects:
-  - software
+  - conduit
 abstract: |
   Here, we test the performance and scalability of fully-asynchronous, best-effort communication on existing, commercially-available HPC hardware. 
 
