Update after hstrat publication

--- a/blog_efflux/_posts/2022-11-07-moreno2022hstrat.md
+++ b/blog_efflux/_posts/2022-11-07-moreno2022hstrat.md
@@ -4,13 +4,13 @@ title: "hstrat: a Python Package for phylogenetic inference on distributed digit
 date: 2022-11-07
 permalink: "/pubs/:title"
 category: journal
-download: https://github.com/mmore500/hstrat/releases/download/as-submitted-joss/paper.pdf
-# doi: "10.1145/3520304.3533937"
+download: https://www.theoj.org/joss-papers/joss.04866/10.21105.joss.04866.pdf
+doi: "10.21105/joss.04866"
 authors:
   - Matthew Andres Moreno
   - Emily Dolson
   - Charles Ofria
-venue: Journal of Open Source Science (Under Revision)
+venue: Journal of Open Source Software
 projects:
   - hstrat
 abstract: |
@@ -20,43 +20,22 @@ abstract: |
   Perfect observability, in particular, enables *in silico* experiments that would be otherwise impossible *in vitro* or *in vivo*.
   Notably, availability of the full evolutionary history (phylogeny) of a given population enables very powerful analyses.
 
-  As a slow but highly parallelizable process, digital evolution will benefit greatly by continuing to capitalize on profound advances in parallel and distributed computing [@moreno2020practical;@ackley2014indefinitely], particularly emerging unconventional computing architectures [@ackley2011homeostatic;@lauterbach2021path;@furber2014spinnaker].
+  As a slow but highly parallelizable process, digital evolution will benefit greatly by continuing to capitalize on profound advances in parallel and distributed computing, particularly emerging unconventional computing architectures.
   However, scaling up digital evolution presents many challenges.
   Among these is the existing centralized perfect-tracking phylogenetic data collection model, which is inefficient and difficult to realize in parallel and distributed contexts.
   Here, we implement an alternative approach to tracking phylogenies across vast and potentially unreliable hardware networks.
-
-  The `hstrat` Python library exists to facilitate application of hereditary stratigraphy, a cutting-edge technique to enable phylogenetic inference over distributed digital evolution populations.
-  This technique departs from the traditional perfect-tracking approach to phylogenetic record-keeping.
-  Instead, hereditary stratigraphy enables phylogenetic history to be inferred from heritable annotations attached to evolving digital agents.
-  This approach aligns with phylogenetic reconstruction methodologies in evolutionary biology.
-  Hereditary stratigraphy attaches a set of immutable historical "checkpoints" --- referred to as _strata_ --- as an annotation on evolving genomes.
-  Checkpoints can be strategically discarded to reduce annotation size at the cost of increasing inference uncertainty.
-  A particular strategy for which checkpoints to discard when is referred to as a _stratum retention policy_.
-  We refer to the set of retained strata as a _hereditary stratigraphic column_.
-
-  Appropriate stratum retention policy choice varies by application.
-  For example, if annotation size is not a concern it may be best to preserve all strata.
-  In other situations, it may be necessary to constrain annotation size to remain within a fixed memory budget.
-
-  Key features of the library include:
-
-  - object-oriented hereditary stratigraphic column implementation to annotate arbitrary genomes,
-  - modular interchangeability and user extensibility of stratum retention policies,
-  - programmatic interface to query guarantees and behavior of stratum retention policy,
-  - modular interchangeability and user extensibility of back-end data structure used to store annotation data,
-  - a suite of visualization tools to elucidate stratum retention policies,
-  - support for automatic parameterization of stratum retention policies to meet user size complexity or inference precision specifications,
-  - tools to compare two columns and extract information about the phylogenetic relationship between them,
-  - [extensive documentation](https://hstrat.readthedocs.io) hosted on [ReadTheDocs](https://readthedocs.io),
-  - a comprehensive test suite to ensure stability and reliability,
-  - convenient availability as a Python package via the [PyPI repository](https://pypi.org/), and
-  - pure Python implementation to ensure universal portability.
 bibtex: |-
   @article{moreno2022hstrat,
-    author = {Moreno, Matthew Andres and Dolson, Emily and Ofria, Charles},
-    title = "{hstrat: a Python Package for phylogenetic inference on distributed digital evolution populations}",
-    journal = {Journal of Open Source Software},
-    year = {Under Revision},
-  }
-citation: "Matthew Andres Moreno, Emily Dolson, and Charles Ofria. hstrat: a Python Package for phylogenetic inference on distributed digital evolution populations. Journal of Open Source Software. Under Revision."
+    doi = {10.21105/joss.04866},
+    url = {https://doi.org/10.21105/joss.04866},
+    year = {2022}
+    publisher = {The Open Journal},
+    volume = {7},
+    number = {80}
+    pages = {4866}
+    author = {Matthew Andres Moreno and Emily Dolson and Charles Ofria}, 
+    title = {hstrat: a Python Package for phylogenetic inference on distributed digital evolution populations},
+    journal = {Journal of Open Source Software}
+}
+citation: "Moreno et al., (2022). hstrat: a Python Package for phylogenetic inference on distributed digital evolution populations. Journal of Open Source Software, 7(80), 4866, https://doi.org/10.21105/joss.04866"
 ---
