Update in print alife conf paper entry

--- a/blog_efflux/_posts/2023-07-24-moreno2023toward.md
+++ b/blog_efflux/_posts/2023-07-24-moreno2023toward.md
@@ -5,6 +5,8 @@ date: 2023-07-24
 permalink: "/pubs/:title"
 category: conference
 download: https://github.com/mmore500/hereditary-stratigraph-concept/releases/download/v0.3.0/hereditary-stratigraph-concept-manuscript.pdf
+view_publisher: https://doi.org/10.1162/isal_a_00694
+doi: "10.1162/isal_a_00694"
 authors:
   - Matthew Andres Moreno
   - Emily Dolson
@@ -22,18 +24,24 @@ abstract: |
   We find that selection pressure, spatial structure, and ecology have distinct effects on phylogenetic metrics, although these effects are complex and not always intuitive.
   We also find that, while low-resolution phylogenetic reconstructions can bias some phylogenetic metrics, high-resolution reconstructions recapitulate them faithfully.
 bibtex: |-
-  @inproceedings{moreno2023toward,
-      author = {Moreno, Matthew Andres and Dolson, Emily and Rodriguez-Papa, Santiago},
-      title = "{Toward Phylogenetic Inference of Evolutionary Dynamics at Scale}",
-      volume = {ALIFE 2023: The 2023 Conference on Artificial Life},
-      series = {ALIFE 2023: The 2023 Conference on Artificial Life},
-      year = {in print},
+  @proceedings{moreno2023toward,
+    author = {Moreno, Matthew Andres and Dolson, Emily and Rodriguez-Papa, Santiago},
+    title = "{Toward Phylogenetic Inference of Evolutionary Dynamics at Scale}",
+    volume = {ALIFE 2023: Ghost in the Machine: Proceedings of the 2023 Artificial Life Conference},
+    series = {ALIFE 2023: Ghost in the Machine: Proceedings of the 2023 Artificial Life Conference},
+    pages = {79},
+    year = {2023},
+    month = {07},
+    doi = {10.1162/isal_a_00694},
+    url = {https://doi.org/10.1162/isal\_a\_00694},
+    eprint = {https://direct.mit.edu/isal/proceedings-pdf/isal/35/79/2149068/isal\_a\_00694.pdf},
   }
-citation: 'Matthew Andres Moreno, Emily Dolson, and Santiago Rodriguez-Papa; in print. "Toward Phylogenetic Inference of Evolutionary Dynamics at Scale." Proceedings of the ALIFE 2023: The 2023 Conference on Artificial Life. ALIFE 2023: The 2023 Conference on Artificial Life. Online.'
+citation: 'Matthew Andres Moreno, Emily Dolson, Santiago Rodriguez-Papa; July 24–28, 2023. "Toward Phylogenetic Inference of Evolutionary Dynamics at Scale." Proceedings of the ALIFE 2023: Ghost in the Machine: Proceedings of the 2023 Artificial Life Conference. ALIFE 2023: Ghost in the Machine: Proceedings of the 2023 Artificial Life Conference. Online. (pp. 79). ASME. https://doi.org/10.1162/isal_a_00694'
 supporting_materials: |
   - [data](https://osf.io/vtxwd/) [via Open Science Framework ❋](https://osf.io)
   - [source code](https://github.com/mmore500/hstrat-evolutionary-inference/tree/v1.0.0) [via GitHub <i class="icon-github-1"></i>](https://github.com/)
   - [hstrat library code](https://github.com/mmore500/hstrat/tree/v1.6.1) [via GitHub <i class="icon-github-1"></i>](https://github.com/)
+  - [artificial life conference slides](https://docs.google.com/presentation/d/119jvewHwkdfrVGmy-H9L-S4ow6WC2H_QxG3wJxW_gCg/) [via Google Slides](https://workspace.google.com/products/slides/)
   - [evolution conference presentation](https://youtu.be/2cRbRJSA5Qw?t=3774) [via YouTube <i class="icon-video"></i>](https://youtube.com)
   - [evolution conference slides](https://docs.google.com/presentation/d/1_e-_cCGmdavRN5RscQeml52IDXyQSjyvoJ6K9fLQhE8/) [via Google Slides](https://workspace.google.com/products/slides/)
   - [LaTeX source](https://github.com/mmore500/hstrat-evolutionary-inference/tree/239992269f9387596d4be726eb860b733e00b6ed) [via GitHub <i class="icon-github-1"></i>](https://github.com/)
