Temporarily use eprint link instead of doi
Alife conf doi’s aren’t active yet.

--- a/blog_efflux/_posts/2023-07-24-moreno2023toward.md
+++ b/blog_efflux/_posts/2023-07-24-moreno2023toward.md
@@ -5,7 +5,7 @@ date: 2023-07-24
 permalink: "/pubs/:title"
 category: conference
 download: https://github.com/mmore500/hereditary-stratigraph-concept/releases/download/v0.3.0/hereditary-stratigraph-concept-manuscript.pdf
-view_publisher: https://doi.org/10.1162/isal_a_00694
+view_publisher: https://direct.mit.edu/isal/proceedings/isal/35/79/116807
 doi: "10.1162/isal_a_00694"
 authors:
   - Matthew Andres Moreno
