Fix alife 2023 conf manuscript download link

--- a/blog_efflux/_posts/2023-07-24-moreno2023toward.md
+++ b/blog_efflux/_posts/2023-07-24-moreno2023toward.md
@@ -4,7 +4,7 @@ title: "Toward Phylogenetic Inference of Evolutionary Dynamics at Scale"
 date: 2023-07-24
 permalink: "/pubs/:title"
 category: conference
-download: https://github.com/mmore500/hereditary-stratigraph-concept/releases/download/v0.3.0/hereditary-stratigraph-concept-manuscript.pdf
+download: https://github.com/mmore500/hstrat-evolutionary-inference/releases/download/camera-ready/hstrat-evolutionary-inference-manuscript.pdf
 view_publisher: https://direct.mit.edu/isal/proceedings/isal/35/79/116807
 doi: "10.1162/isal_a_00694"
 authors:
