Update matchmaker HOP with publication info

--- a/blog_efflux/_posts/2023-07-17-moreno2023tag.md
+++ b/blog_efflux/_posts/2023-07-17-moreno2023tag.md
@@ -25,16 +25,22 @@ bibtex: |-
   @inproceedings{moreno2023tag,
     author = {Moreno, Matthew Andres and Lalejini, Alexander and Ofria, Charles},
     title = {Tag Affinity Criteria Influence Adaptive Evolution},
-    year = {in print},
-    publisher = {Association for Computing Machinery},
+    isbn = {9798400701207},
+    year = {2023},
+    publisher= {Association for Computing Machinery},
     address = {New York, NY, USA},
-    booktitle = {Proceedings of the Genetic and Evolutionary Computation Conference Companion},
+    url = {https://doi.org/10.1145/3583133.3595834},
+    doi = {10.1145/3583133.3595834},
+    booktitle= {Proceedings of the Genetic and Evolutionary Computation Conference Companion},
+    pages = {35-36},
+    numpages = {2},
+    keywords  = {artificial gene regulatory networks, tag-based referencing, genetic programming, module-based genetic programming, event-driven genetic programming},
     location = {Lisbon, Portugal},
     series = {GECCO '23}
   }
-citation: "Matthew Andres Moreno, Alexander Lalejini, and Charles Ofria. 2023. Tag Affinity Criteria Influence Adaptive Evolution. In Proceedings of the Genetic and Evolutionary Computation Conference Companion (GECCO '22). Association for Computing Machinery, New York, NY, USA."
+citation: "Matthew Andres Moreno, Alexander Lalejini, and Charles Ofria. 2023. Tag Affinity Criteria Influence Adaptive Evolution. In Proceedings of the Companion Conference on Genetic and Evolutionary Computation (GECCO '23 Companion). Association for Computing Machinery, New York, NY, USA, 35–36. https://doi.org/10.1145/3583133.3595834"
 supporting_materials: |
-  - [presentation](https://youtu.be/-pRSWX0shT0) [via YouTube <i class="icon-video"></i>](https://youtube.com)
+  - [presentation](https://youtu.be/WwftoxuF3jU) [via YouTube <i class="icon-video"></i>](https://youtube.com)
   - [slides](https://docs.google.com/presentation/d/1-Qn5cpOpItj_KKy3qO4QXui3PJjn7eCRVRwRc0XkChk/) [via Google Slides](https://workspace.google.com/products/slides/)
   - [LaTeX source](https://github.com/mmore500/tag-olympics-writeup/tree/v2.1.2) [via GitHub <i class="icon-github-1"></i>](https://github.com/)
   - [primary publication](https://doi.org/10.1007/s10710-023-09448-0)
