Fix yaml syntax and add missing fields

--- a/blog_efflux/_posts/2023-07-17-moreno2023tag.md
+++ b/blog_efflux/_posts/2023-07-17-moreno2023tag.md
@@ -5,6 +5,8 @@ date: 2023-07-17
 permalink: "/pubs/:title"
 category: abstract
 download: https://github.com/mmore500/tag-olympics-writeup/releases/download/v2.1.2/tag-olympics-writeup.pdf
+view_publisher: https://doi.org/10.1145/3583133.3595834
+doi: "10.1145/3583133.3595834"
 authors:
   - Matthew Andres Moreno
   - Alexander Lalejini
